--- a/BookStore_Mock_Project/Pages/Admin/Books_Page/Details.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/Books_Page/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Book.Category)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Category.CategoryId)
+            @Html.DisplayFor(model => model.Book.Category.Name)
         </dd>
     </dl>
 </div>
