--- a/BookStore_Mock_Project/Pages/Admin/Books_Page/Index.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/Books_Page/Index.cshtml
@@ -13,11 +13,45 @@
     </li>
 </ul>
 <div class="tab-content" id="myTabContent">
+    <h1>User list</h1>
+    @if (TempData["DeleteSuccess"] != null)
+    {
+
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>@TempData["DeleteSuccess"]</strong> 
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+    @if (TempData["CreateSuccess"] != null)
+    {
+
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>@TempData["CreateSuccess"]</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+    
+    @if (TempData["RestoreBook"] != null)
+    {
+
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>@TempData["RestoreBook"]</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+    @if (TempData["EditSuccess"] != null)
+    {
+
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>@TempData["EditSuccess"]</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-        <p>
-            <a asp-page="Create">Create New</a>
-        </p>
-        <table class="table">
+     
+            <a asp-page="Create" class="btn btn-primary mb-3">Create New</a>
+           
+        <table class="table table-hover table-bordered">
             <thead>
                 <tr>
                     <th>
@@ -51,12 +85,12 @@
                                 @Html.DisplayFor(modelItem => item.Price)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Category.CategoryId)
+                                @Html.DisplayFor(modelItem => item.Category.Name)
                             </td>
                             <td>
-                                <a asp-page="./Edit" asp-route-id="@item.BookId">Edit</a> |
-                                <a asp-page="./Details" asp-route-id="@item.BookId">Details</a> |
-                                <a asp-page="./Delete" asp-route-id="@item.BookId">Delete</a>
+                                <a asp-page="./Edit" asp-route-id="@item.BookId" class="btn btn-primary">Edit</a> 
+                                <a asp-page="./Details" asp-route-id="@item.BookId" class="btn btn-info">Details</a> 
+                                <a asp-page="./Delete" asp-route-id="@item.BookId" class="btn btn-danger">Delete</a>
                             </td>
                         </tr>
                     }
@@ -65,10 +99,11 @@
         </table>
     </div>
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-        <p>
-            <a asp-page="Create">Create New</a>
-        </p>
-        <table class="table">
+        <h1>User deleted</h1>
+
+        <a asp-page="Create" class="btn btn-primary mb-3">Create New</a>
+       
+        <table class="table table-hover table-bordered">
             <thead>
                 <tr>
                     <th>
@@ -102,12 +137,13 @@
                                 @Html.DisplayFor(modelItem => item.Price)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Category.CategoryId)
+                                @Html.DisplayFor(modelItem => item.Category.Name)
                             </td>
                             <td>
-                                <a asp-page="./Edit" asp-route-id="@item.BookId">Edit</a> |
-                                <a asp-page="./Details" asp-route-id="@item.BookId">Details</a> |
-                                <a asp-page="./Delete" asp-route-id="@item.BookId">Delete</a>
+                                <form method="post">
+                                    <input type="hidden" name="bookId" value="@item.BookId" />
+                                    <button type="submit" name="updateStatusButton" class="btn btn-success">Restore user</button>
+                                </form>
                             </td>
                         </tr>
                     }
