--- a/BookStore_Mock_Project/Pages/Admin/Books_Page/Index.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/Books_Page/Index.cshtml
@@ -6,14 +6,14 @@
 }
 <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">User List</button>
+        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Book List</button>
     </li>
     <li class="nav-item" role="presentation">
         <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Deleted</button>
     </li>
 </ul>
 <div class="tab-content" id="myTabContent">
-    <h1>User list</h1>
+    <h1>Book list</h1>
     @if (TempData["DeleteSuccess"] != null)
     {
 
