--- a/BookStore_Mock_Project/Pages/Index.cshtml
+++ b/BookStore_Mock_Project/Pages/Index.cshtml
@@ -1,10 +1,34 @@
 ﻿@page
-@model IndexModel
+@model BookStore_Mock_Project.Pages.IndexModel
+
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Index";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1>Index</h1>
+
+<div class="card-group">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        @foreach (var item in Model.Book)
+        {
+            <div class="col">
+                <div class="card h-100">
+                    <img src="~/img/open-book.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Title</h5>
+                        <p class="card-text">@item.Price</p>
+                        <p class="card-text">@item.Category.Name</p>
+                        <p class="card-text">@item.Author</p>
+                    </div>
+                    <div class="card-footer">
+                        <form method="post">
+                            <input type="hidden" name="bookId" value="@item.BookId" />
+                            <button type="submit" class="btn btn-primary" asp-page-handler="AddToCart">Add to Cart</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
+
