--- a/BookStore_Mock_Project/Pages/Login.cshtml
+++ b/BookStore_Mock_Project/Pages/Login.cshtml
@@ -30,8 +30,8 @@
         </div>
 
         <div class="d-flex justify-content-center gap-5">
-            <button type="submit" class="btn btn-primary" style="width: 100px">Login</button>
-            <button type="submit" class="btn btn-primary" style="width: 100px">Register</button>
+            <button type="submit" asp-page-handler="Login" class="btn btn-primary" style="width: 100px">Login</button>
+            <button type="submit" asp-page-handler="Register" class="btn btn-primary" style="width: 100px">Register</button>
         </div>
     </form>
 </div>
