display book flow categories

--- a/BookStore_Mock_Project/Pages/Index.cshtml
+++ b/BookStore_Mock_Project/Pages/Index.cshtml
@@ -8,64 +8,81 @@
 
 <h1 class="mt-3 mb-3 text-center">Wellcome to my bookstore</h1>
 
-<div class="container d-flex justify-content-center">
-    <ul class="nav nav-tabs">
+<div class="container mt-5">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item">
-            <a class="nav-link active" data-bs-toggle="tab" href="#all">All</a>
+            <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1" aria-selected="true">All</a>
         </li>
-        @foreach (var item in Model.Category)
+        @foreach (var categories in Model.Category)
         {
             <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#@item.Name">@item.Name  </a>
+                <a class="nav-link" id="@categories.Name-tab" data-toggle="tab" href="#@categories.Name" role="tab" aria-controls="@categories.Name" aria-selected="false">@categories.Name</a>
             </li>
         }
-
     </ul>
-</div>
-
-<!-- Tab panes -->
-<div class="tab-content mt-1">
-    <div class="tab-pane container active" id="all">
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-            @foreach (var item in Model.Book)
-            {
-                <div class="col-4">
-                    <div class="card h-100">
-                        <div class="card-header">
-                            <img src="./img/sach-hay-khien-tuong-lai-biet-on-vi-hien-tai-ban-da-co-gang-het-minh.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="card-body h-25">
-                            <h5 class="card-title text-truncate " data-bs-toggle="tooltip" data-bs-placement="right" title="@item.Title - @item.Author">@item.Title - @item.Author</h5>
-                            <p class="card-text text-truncate-3">@item.Description</p>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between ">
-                            <div>
-                                <h5 class="card-title">@item.Price$</h5>
-                                <small class="card-subtitle">Quantity: @item.Quantity</small> <br />
-                                <small class="card-text">@item.Category.Name</small>
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+                @foreach (var item in Model.Book)
+                {
+                    <div class="col-4">
+                        <div class="card h-100">
+                            <div class="card-header h-50">
+                                <img src="./img/sach-hay-khien-tuong-lai-biet-on-vi-hien-tai-ban-da-co-gang-het-minh.jpg" class="card-img-top" height="100%" alt="...">
                             </div>
+                            <div class="card-body h-25" style="padding: 0, 2px, 0, 2px">
+                                <h5 class="card-title text-truncate " data-bs-toggle="tooltip" data-bs-placement="right" title="@item.Title - @item.Author">@item.Title - @item.Author</h5>
+                                <p class="card-text text-truncate-3">@item.Description</p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-between h-25">
+                                <div>
+                                    <h5 class="card-title">@item.Price$</h5>
+                                    <small class="card-subtitle">Quantity: @item.Quantity</small> <br />
+                                    <small class="card-text">@item.Category.Name</small>
+                                </div>
 
-                            <button class="btn btn-danger">Add to cart</button>
+                                <button class="btn btn-danger">Add to cart</button>
+                            </div>
                         </div>
                     </div>
-                </div>
-            }
-        </div>
-    </div>
-    @foreach (var item in Model.Category)
-    {
-        <div class="tab-pane container active" id="@item.Name">
-            <div class="row row-cols-1 row-cols-md-4 g-4">
-                @foreach(var book in Model.Book)
-                {
-                    if(book.Category.Name == item.Name)
-                    {
-                        <div>
-                            @book.Title
-                        </div>
-                    }
                 }
             </div>
         </div>
-    }
+        @foreach(var tab in Model.Category)
+        {
+            <div class="tab-pane fade" id="@tab.Name" role="tabpanel" aria-labelledby="@tab.Name-tab">
+                <div class="row row-cols-1 row-cols-md-4 g-4">
+                    @foreach (var item in Model.Book)
+                    {
+                        if(item.Category.Name == tab.Name)
+                        {
+                            <div class="col-4">
+                                <div class="card h-100">
+                                    <div class="card-header">
+                                        <img src="./img/sach-hay-khien-tuong-lai-biet-on-vi-hien-tai-ban-da-co-gang-het-minh.jpg" class="card-img-top" height="100%" alt="...">
+                                    </div>
+                                    <div class="card-body h-25" style="padding: 0, 2px, 0, 2px">
+                                        <h5 class="card-title text-truncate " data-bs-toggle="tooltip" data-bs-placement="right" title="@item.Title - @item.Author">@item.Title - @item.Author</h5>
+                                        <p class="card-text text-truncate-3">@item.Description</p>
+                                    </div>
+                                    <div class="card-footer d-flex justify-content-between h-25">
+                                        <div>
+                                            <h5 class="card-title">@item.Price$</h5>
+                                            <small class="card-subtitle">Quantity: @item.Quantity</small> <br />
+                                            <small class="card-text">@item.Category.Name</small>
+                                        </div>
+
+                                        <button class="btn btn-danger">Add to cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
+            </div>
+        }
+    </div>
 </div>
+
+
+
