--- a/BookStore_Mock_Project/Pages/Login.cshtml
+++ b/BookStore_Mock_Project/Pages/Login.cshtml
@@ -6,34 +6,62 @@
     Layout = "BoostrapLayout";
     
 }
-<div class="container">
-
-    <h1 class="text-center">Login form</h1>
+<div class="d-flex justify-content-center align-items-center mt-5">
 
 
-    <form method="post">
-        <div class="container">
-            <div class="form-group">
-                <label >Username</label>
-                <input type="text" class="form-control" asp-for="username" placeholder="Enter username" />
-            </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" class="form-control" asp-for="password" placeholder="Enter password" />
-            </div>
-            <div class="d-flex gap-2 mt-2 mb-2">
-                <div class="form-group">
-                    <label><a style="color: blue">Forget password</a></label>
+    <div class="card">
+
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item text-center">
+                <a class="nav-link active btl" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Login</a>
+            </li>
+            <li class="nav-item text-center">
+                <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1" aria-selected="true">All</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+
+                <div class="form px-4 pt-5">
+
+                    <input type="text" name="" class="form-control" placeholder="Email or Phone">
+
+                    <input type="text" name="" class="form-control" placeholder="Password">
+                    <button class="btn btn-dark btn-block">Login</button>
+
                 </div>
-                <div class="form-group">
-                    <label><a style="color: black">Change Password </a></label>
-                </div>
+
+
+
             </div>
+            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+
+
+                <div class="form px-4">
+
+                    <input type="text" name="" class="form-control" placeholder="Name">
+
+                    <input type="text" name="" class="form-control" placeholder="Email">
+
+                    <input type="text" name="" class="form-control" placeholder="Phone">
+
+                    <input type="text" name="" class="form-control" placeholder="Password">
+
+                    <button class="btn btn-dark btn-block">Signup</button>
+
+
+                </div>
+
+
+
+            </div>
+
         </div>
 
-        <div class="d-flex justify-content-center gap-5">
-            <button type="submit" asp-page-handler="Login" class="btn btn-primary" style="width: 100px">Login</button>
-            <button type="submit" asp-page-handler="Register" class="btn btn-primary" style="width: 100px">Register</button>
-        </div>
-    </form>
+
+
+
+    </div>
+
+
 </div>
