--- a/BookStore_Mock_Project/Pages/Purchase.cshtml
+++ b/BookStore_Mock_Project/Pages/Purchase.cshtml
@@ -40,15 +40,15 @@
                                     </div>
                                     <div class="col-4 d-flex gap-1">
                                         <form method="post" asp-page="Purchase" asp-page-handler="AddQty">
-                                            <button class="btn btn-primary" name="id" value="@item.Book.Id">+</button>
+                                            <button class="btn btn-primary" name="id" value="@item.Book.BookId">+</button>
                                         </form>
                                         <form method="post" asp-page="Purchase" asp-page-handler="MinusQty">
-                                            <button class="btn btn-danger" name="id" value="@item.Book.Id">-</button>
+                                            <button class="btn btn-danger" name="id" value="@item.Book.BookId">-</button>
                                         </form>
                                     </div>
                                     <div class="col-2">
                                         <form method="post" asp-page="Purchase" asp-page-handler="RemoveItem">
-                                            <button class="btn btn-link btn-sm" name="id" value="@item.Book.Id">
+                                            <button class="btn btn-link btn-sm" name="id" value="@item.Book.BookId">
                                                 <i class="bi bi-trash3 text-danger fs-4"></i>
                                             </button>
                                         </form>
