--- a/BookStore_Mock_Project/Pages/Admin/User_Page/Details.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/User_Page/Details.cshtml
@@ -44,6 +44,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.User?.UserId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.User?.UserId" class="btn btn-success">Edit</a> 
+    <a asp-page="./Index" class="btn btn-warning">Back to List</a>
 </div>
