--- a/BookStore_Mock_Project/Pages/Admin/User_Page/Index.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/User_Page/Index.cshtml
@@ -43,9 +43,6 @@
                             @Html.DisplayNameFor(model => model.User[0].Password)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.User[0].Status)
-                        </th>
-                        <th>
                             @Html.DisplayNameFor(model => model.User[0].Email)
                         </th>
                         <th>
@@ -65,9 +62,6 @@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Password)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Status)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Email)
@@ -99,9 +93,6 @@
                             @Html.DisplayNameFor(model => model.User[0].Password)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.User[0].Status)
-                        </th>
-                        <th>
                             @Html.DisplayNameFor(model => model.User[0].Email)
                         </th>
                         <th>
@@ -123,18 +114,14 @@
                                     @Html.DisplayFor(modelItem => item.Password)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Status)
-                                </td>
-                                <td>
                                     @Html.DisplayFor(modelItem => item.Email)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Role.Name)
                                 </td>
                                 <td>
-                                    <a asp-page="./Edit" asp-route-id="@item.UserId" class="btn btn-secondary">Edit</a> 
-                                    <a asp-page="./Details" asp-route-id="@item.UserId" class="btn btn-info">Details</a> 
-                                    <a asp-page="./Delete" asp-route-id="@item.UserId" class="btn btn-danger">Delete</a>
+                                    <a asp-page="./Restore" asp-route-id="@item.UserId" class="btn btn-secondary">Restore</a> 
+                                    <a asp-page="./PermDelete" asp-route-id="@item.UserId" class="btn btn-danger">Delete</a>
                                 </td>
                             </tr>
                         }
