--- a/BookStore_Mock_Project/Pages/Shared/_Layout.cshtml
+++ b/BookStore_Mock_Project/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center justify-content-center" asp-page="/Index">
-                    <img src="/img_logo/open-book.png" alt="Logo" width="60px" />
+                    <img src="~/img/open-book.png" alt="Logo" width="60px" />
                     <h2>Bookstore</h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
