--- a/BookStore_Mock_Project/Pages/Admin/Category_Page/Edit.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/Category_Page/Edit.cshtml
@@ -24,9 +24,9 @@
                 <input asp-for="BookCategory.Description" class="form-control" />
                 <span asp-validation-for="BookCategory.Description" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group form-check" hidden>
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="BookCategory.Status" /> @Html.DisplayNameFor(model => model.BookCategory.Status)
+                    <input class="form-check-input" asp-for="BookCategory.Status" checked/> @Html.DisplayNameFor(model => model.BookCategory.Status)
                 </label>
             </div>
             <div class="form-group">
