--- a/BookStore_Mock_Project/Pages/Admin/Category_Page/PermDelete.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/Category_Page/PermDelete.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
-@model BookStore_Mock_Project.Pages.Admin.Category_Page.DetailsModel
+@model BookStore_Mock_Project.Pages.Admin.Category_Page.PermDeleteModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "PermDelete";
 }
 
-<h1>Details</h1>
+<h1>PermDelete</h1>
 
+<h3>Are you sure you want to permanently delete this?</h3>
 <div>
     <h4>BookCategory</h4>
     <hr />
@@ -24,8 +25,10 @@
             @Html.DisplayFor(model => model.BookCategory.Description)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.BookCategory?.CategoryId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    
+    <form method="post">
+        <input type="hidden" asp-for="BookCategory.CategoryId" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-page="./Index">Back to List</a>
+    </form>
 </div>
