--- a/BookStore_Mock_Project/Pages/Admin/Category_Page/Index.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/Category_Page/Index.cshtml
@@ -92,7 +92,7 @@
                 <tbody>
                     @foreach (var item in Model.BookCategory)
                     {
-                        if (item.Status == true)
+                        if (item.Status == false)
                         {
                             <tr>
                                 <td>
@@ -102,9 +102,8 @@
                                     @Html.DisplayFor(modelItem => item.Description)
                                 </td>
                                 <td>
-                                    <a asp-page="./Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                                    <a asp-page="./Details" asp-route-id="@item.CategoryId">Details</a> |
-                                    <a asp-page="./Delete" asp-route-id="@item.CategoryId">Delete</a>
+                                    <a asp-page="./Restore" asp-route-id="@item.CategoryId" class="btn btn-secondary">Restore</a>
+                                    <a asp-page="./PermDelete" asp-route-id="@item.CategoryId" class="btn btn-danger">Delete</a>
                                 </td>
                             </tr>
                         }
