--- a/BookStore_Mock_Project/Pages/Admin/Order_Page/Index.cshtml
+++ b/BookStore_Mock_Project/Pages/Admin/Order_Page/Index.cshtml
@@ -3,13 +3,11 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "Admin_Layout";
 }
 
 <h1>Index</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -38,8 +36,7 @@
                 @Html.DisplayFor(modelItem => item.User.Password)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.OrderId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.OrderId">Details</a> |
+                <a asp-page="./Details" asp-route-id="@item.OrderId">Details</a> 
                 <a asp-page="./Delete" asp-route-id="@item.OrderId">Delete</a>
             </td>
         </tr>
